refactor: spell every member of an answer in snake case
